# pushworld_bot

./: .gitignore  environment.yml  environment_clean.yml
benchmark/puzzles/level0/: puzzle_0.pwp
benchmark/puzzles/manual/: actor_goal.pwp  actor_only.pwp  box.pwp  corridor6x1.pwp  simple.pwp  super_simple.pwp  tiny.pwp
environment/src/pushworld/: gym_env.py
environment/src/pushworld.egg-info/: PKG-INFO
environment/trash/: dm_env.py
experiments/exp/: actions.npy  config.yml  cscg.pkl  encoder.pkl  observations.npy
experiments/exp1/: config.yml
python3/: pyproject.toml  requirements.txt  setup.ps1  setup.sh
python3/data_collection/: main.py  train.py
python3/src/pushworld.egg-info/: PKG-INFO  SOURCES.txt
training/: analysis.py  basic_loop.py  chmm_actions.py  config.yaml  config2.yaml  cscg_helpers.py  encoder_training.py  encoders.py  experiment.py  main.ipynb  main.py  run.sh  schema.yaml  submit_jobs.sh  test_novel_forward.py
